--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="aprakoso98.appsmgr">
-
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
 </manifest>
